maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:-8: error: Unmatched closing brace '}' ignored here
	}
        ^RandomMouseMaze:-7: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^RandomMouseMaze:-3: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^RandomMouseMaze:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^